<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/listFragment"
        android:enabled="true"
        android:icon="@drawable/ic_list"
        android:title="@string/title_list"/>
    <item
        android:id="@+id/notificationsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_notifications"
        android:title="@string/title_notifications"/>
    <item
        android:id="@+id/searchFragment"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/title_search"/>
    <item
        android:id="@+id/accountFragment"
        android:enabled="true"
        android:icon="@drawable/ic_account"
        android:title="@string/title_account"/>
</menu>