<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.AnimeDetailsFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView_details"
                android:layout_width="match_parent"
                android:layout_height="251dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_home" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp">

                <TextView
                    android:id="@+id/textView_details_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:text="@string/title"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/textView_details_titleIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="TextView"
                    app:layout_constraintStart_toEndOf="@+id/textView_details_title" />

                <TextView
                    android:id="@+id/textView_details_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/year"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView_details_title" />

                <TextView
                    android:id="@+id/textView_details_yearIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="TextView"
                    app:layout_constraintStart_toEndOf="@+id/textView_details_year"
                    tools:layout_editor_absoluteY="19dp" />

                <TextView
                    android:id="@+id/textView_n_episodes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:text="@string/episodes_number"
                    app:layout_constraintStart_toEndOf="@+id/textView_details_yearIn"
                    tools:layout_editor_absoluteY="19dp" />

                <TextView
                    android:id="@+id/textView_n_episodesIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="TextView"
                    app:layout_constraintStart_toEndOf="@+id/textView_n_episodes"
                    tools:layout_editor_absoluteY="19dp" />

                <TextView
                    android:id="@+id/textView_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView_details_year" />

                <EditText
                    android:id="@+id/editTextTextMultiLine_descriptionIn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="58dp" />

                <TextView
                    android:id="@+id/textView_genres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genres"
                    app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine_descriptionIn" />

                <TextView
                    android:id="@+id/textView_genresIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="TextView"
                    app:layout_constraintStart_toEndOf="@+id/textView_genres"
                    tools:layout_editor_absoluteY="103dp" />

                <TextView
                    android:id="@+id/textView_studios"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/studios"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView_genres" />

                <TextView
                    android:id="@+id/textView_studiosIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="TextView"
                    app:layout_constraintStart_toEndOf="@+id/textView_studios"
                    tools:layout_editor_absoluteY="123dp" />

                <TextView
                    android:id="@+id/textView_producers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/producers"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView_studios" />

                <TextView
                    android:id="@+id/textView_producersIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="TextView"
                    app:layout_constraintStart_toEndOf="@+id/textView_producers"
                    tools:layout_editor_absoluteY="142dp" />

                <TextView
                    android:id="@+id/textView_trailerLink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trailer_link"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView_producers" />

                <TextView
                    android:id="@+id/textView_trailerLinkIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="TextView"
                    app:layout_constraintStart_toEndOf="@+id/textView_trailerLink"
                    tools:layout_editor_absoluteY="161dp" />

                <TextView
                    android:id="@+id/textView_reviews"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reviews"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView_trailerLink" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="383dp"
                    android:layout_height="153dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView_reviews"
                    tools:layout_editor_absoluteX="1dp" />

                <TextView
                    android:id="@+id/textView_episodes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/episodes"
                    app:layout_constraintTop_toBottomOf="@+id/recyclerView"
                    tools:layout_editor_absoluteX="2dp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="381dp"
                    android:layout_height="181dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView_episodes"
                    tools:layout_editor_absoluteX="1dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>