<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor">

    <Button
        android:id="@+id/btn_login_registration"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/btn_accedi"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textColorHint="@color/secondaryColor"
        android:textSize="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/txt_there_is_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txt_there_is_account" />

    <TextView
        android:id="@+id/txt_there_is_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/txt_there_is_account"
        android:textColor="@color/secondaryColor"
        android:textSize="16dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_login_registration"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crea_account" />

    <ImageView
        android:id="@+id/image_logo2"
        android:layout_width="300dp"
        android:layout_height="180dp"
        android:layout_marginTop="4dp"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_registrati"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/crea_account"
        android:textColor="@color/secondaryColor"
        android:textSize="28dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_logo2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="22dp"
        android:hint="Nome Utente"
        android:textColorHint="@color/secondaryColor"
        app:boxBackgroundColor="#00000000"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/txt_registrati"
        app:startIconDrawable="@drawable/baseline_account_circle_24"
        app:startIconTint="@color/secondaryColor">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="26dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputRegistration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="22dp"
        android:hint="@string/email"
        android:textColorHint="@color/secondaryColor"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/nameInput"
        app:startIconDrawable="@drawable/baseline_alternate_email_24"
        app:startIconTint="@color/secondaryColor">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputRegistration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="22dp"
        android:hint="@string/password"
        android:textColorHint="@color/secondaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/emailInputRegistration"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/secondaryColor"
        app:startIconDrawable="@drawable/baseline_lock_24"
        app:startIconTint="@color/secondaryColor">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/crea_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="22dp"
        android:text="@string/crea_account"
        android:textColor="@color/secondaryColor"
        android:textSize="20dp"
        app:backgroundTint="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/passwordInputRegistration"
        app:strokeColor="@color/secondaryColor"
        app:strokeWidth="2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>