<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.AnimeRecommendationsDetailsFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="90dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView_details"
                android:layout_width="match_parent"
                android:layout_height="251dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_home" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp">

                <TextView
                    android:id="@+id/textView_details_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:text="@string/title"
                    android:textColor="@color/secondaryColor"
                    android:textSize="18dp"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/textView_details_titleIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:textColor="@color/secondaryColor"
                    android:textSize="18dp"
                    app:layout_constraintStart_toEndOf="@+id/textView_details_title" />


                <TextView
                    android:id="@+id/textView_reviews"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/reviews"
                    android:textColor="@color/secondaryColor"
                    android:textSize="18dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView_details_title" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView_reviews"
                    android:layout_width="wrap_content"
                    android:layout_height="250dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView_reviews"
                    tools:layout_editor_absoluteX="2dp" />

                <TextView
                    android:id="@+id/textView_episodes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/episodes"
                    android:textColor="@color/secondaryColor"
                    android:textSize="18dp"
                    app:layout_constraintTop_toBottomOf="@+id/recyclerView_reviews"
                    tools:layout_editor_absoluteX="2dp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView_episodesIn"
                    android:layout_width="381dp"
                    android:layout_height="181dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView_episodes"
                    tools:layout_editor_absoluteX="1dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>